--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,9 @@
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" placeholder="Email Address" required>
 
+                <label for="order">Order Number</label>
+                <input type="order" id="order" name="order" placeholder="Enter Order Number">
+
                 <label for="message">Message</label>
                 <textarea id="message" name="message" placeholder="Enter message or query" required></textarea>
 
