added about page image and designed the layout

--- a/About.html
+++ b/About.html
@@ -2,10 +2,33 @@
 <html>
 <body>
 <link rel="stylesheet" href="Styles.css" />
-<h1>About Us</h1>
-<p>Founded in 2025, Loft & Living was created with one goal in mind- to make functional and long-lasting furniture 
-    affordable for first-time homeowners. Our collection has something for every style and every room. </p>
+<div class="split-page">
 
-<h2>Frequently Asked Questions:</h2>
+    <div class="left">
+    <h1>About</h1>
+
+    <p>Loft & living offers a carefully considered selection of homeware for every style,
+        budget and season. Established in 2025, Loft & Living aims to provide affordable
+        and long-lasting furniture designed to create a cozy and complete home.
+        </p>
+        <p>
+        Products are sourced from European brands known for their innovative designs, durability
+        and affordable quality without compromising quality. Each piece in our collection
+        is authentic, original and sourced from authorised manufacturers. </p>
+    </p>
+    <h2>Frequently Asked Questions:</h2>
+    </div>
+    <div class="right">
+
+
+<div class="image-border">
+
+<div class="image-place">
+<img src="about-image.jpg" alt="About-image">
+</div>
+</div>
+</div>
+</div>
+
 </body>
 </html>
