--- a/About.html
+++ b/About.html
@@ -16,7 +16,10 @@
         and affordable quality without compromising quality. Each piece in our collection
         is authentic, original and sourced from authorised manufacturers. </p>
     </p>
-    <h2>Frequently Asked Questions:</h2>
+
+
+
+
     </div>
     <div class="right">
 
@@ -29,6 +32,41 @@
 </div>
 </div>
 </div>
+    
+    <div class="faq-section">
+<h2>Frequently Asked Questions:</h2>
+        <div class="faq-item">
+            <div class="faq-question" >How can I place an order?</div>
+            <div class="faq-answer" >To place an order, select a product
+                from a category and add it to your basket or click checkout,
+                you will be redirected to the checkout page where you can continue
+                as a guest, sign up or sign in. Finally, you can enter your payment
+                information and confirm the payment.</div>
+        </div>
 
+        <div class="faq-item">
+            <div class="faq-question" >How do I create a customer account?</div>
+            <div class="faq-answer" >To create an account, click on the my account
+                icon which is in the shape of a human. Click on sign up and enter your details and click on create account. </div>
+        </div>
+
+        <div class="faq-item">
+            <div class="faq-question" >Can I rate and review products I bought?</div>
+            <div class="faq-answer" >Yes all customers who have purchased a product can
+                leave a review and anyone can view the reviews on a product.</div>
+        </div>
+
+                <div class="faq-item">
+            <div class="faq-question" >How can I update my account information?</div>
+            <div class="faq-answer" >To update your account information, click on my account which
+                is a human icon and click on my account settings. You can change your name, email address and password.</div>
+        </div>
+
+                <div class="faq-item">
+            <div class="faq-question" >How can I get help if I have an issue or a question?</div>
+            <div class="faq-answer" >Click on the contact us page where you can enter your questions
+                and report issues.</div>
+        </div>
+    </div>
 </body>
 </html>
