aligned faqs and subheading

--- a/About.html
+++ b/About.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <link rel="stylesheet" href="Styles.css" />
+
 <div class="split-page">
 
     <div class="left">
@@ -17,14 +18,10 @@
         is authentic, original and sourced from authorised manufacturers. </p>
     </p>
 
-
-
-
     </div>
+
     <div class="right">
-
-
-<div class="image-border">
+    <div class="image-border">
 
 <div class="image-place">
 <img src="about-image.jpg" alt="About-image">
@@ -32,9 +29,9 @@
 </div>
 </div>
 </div>
-    
+    <div class="faq-background">
     <div class="faq-section">
-<h2>Frequently Asked Questions:</h2>
+     <h2>Frequently Asked Questions:</h2>
         <div class="faq-item">
             <div class="faq-question" >How can I place an order?</div>
             <div class="faq-answer" >To place an order, select a product
@@ -67,6 +64,7 @@
             <div class="faq-answer" >Click on the contact us page where you can enter your questions
                 and report issues.</div>
         </div>
+    </div>
     </div>
 </body>
 </html>
