--- a/categories.html
+++ b/categories.html
@@ -7,6 +7,9 @@
 <body>
 
 <h1>LIVING ROOM</h1>
+<div class="search-bar">
+  <input type="text" placeholder="Search..">
+</div>
 
 <div class="image-row">
     <div class="item">
