--- a/contact.html
+++ b/contact.html
@@ -16,19 +16,19 @@
         <section>
             <div class="form-container">
             <form id="contact-form" onsubmit="return validateForm()">
-                <label for="first">Name</label>
+                <label for="first">Name<span class="required">*</span> </label>
                 <input type="text" id="first" name="first" placeholder="First Name" required>
                 
-                <label for="last">Surname</label>
+                <label for="last">Surname<span class="required">*</span></label>
                 <input type="text" id="last" name="last" placeholder="Last Name" required>
                 
-                <label for="email">Email</label>
+                <label for="email">Email<span class="required">*</span></label>
                 <input type="email" id="email" name="email" placeholder="Email Address" required>
 
                 <label for="order">Order Number</label>
                 <input type="order" id="order" name="order" placeholder="Enter Order Number">
 
-                <label for="message">Message</label>
+                <label for="message">Message<span class="required">*</span></label>
                 <textarea id="message" name="message" placeholder="Enter message or query" required></textarea>
 
                 <button type="submit">Submit</button>
