--- a/Homepage.html
+++ b/Homepage.html
@@ -1,43 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Loft & Living</title>
+    <link rel="stylesheet" href="styles/main.css" />
 </head>
+
 <body>
-    <!-- Header / Navigation -->
-    <header>
-        <h1>Welcome to My Website</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+
+    <header class="top-bar">
+        <div class="menu-icon">☰</div>
+
+        <h1 class="logo">
+            LOFT & LIVING<br>
+            <span>BIRMINGHAM</span>
+        </h1>
+
+        <div class="icons">
+            <span class="icon">🛒</span>
+            <span class="icon">♡</span>
+            <span class="icon">👤</span>
+        </div>
     </header>
 
-    <!-- Main content -->
-    <main>
-        <section id="hero">
-            <h2>Your Hero Section</h2>
-            <p>This is where you introduce your site or product.</p>
-            <button>Learn More</button>
+    <main class="categories">
+
+        <section class="card living-room">
+            <div class="title">LIVING ROOM</div>
         </section>
 
-        <section id="features">
-            <h2>Features</h2>
-            <div class="feature-item">Feature 1</div>
-            <div class="feature-item">Feature 2</div>
-            <div class="feature-item">Feature 3</div>
+        <section class="card kitchen">
+            <div class="title">KITCHEN</div>
         </section>
+
+        <section class="card office">
+            <div class="title">OFFICE</div>
+        </section>
+
+        <section class="card bathroom">
+            <div class="title">BATHROOM</div>
+        </section>
+
+        <section class="card bedroom">
+            <div class="title">BEDROOM</div>
+        </section>
+
     </main>
 
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2025 My Website</p>
-    </footer>
 </body>
 </html>
