--- a/categories.html
+++ b/categories.html
@@ -7,11 +7,46 @@
 <body>
 
 <h1>LIVING ROOM</h1>
-<div class="search-bar">
-  <input type="text" placeholder="Search..">
+
+<aside class="side-bar">
+
+  <h3>Keywords</h3>
+  <div class="tags">
+    <span class="tag">Grey</span>
+    <span class="tag">Smart</span>
+    <span class="tag">Modern</span>
+  </div>
+
+  <h3>Categories</h3>
+  <label><input type="checkbox" checked> Coffee Tables</label>
+  <label><input type="checkbox" checked> Side chairs</label>
+  <label><input type="checkbox" checked> Throws</label>
+
+<h3> Label  </h3>
+  <label for="vol">£0-100</label>
+  <input type="range" id="price" name="price" min="0" max="100">
+
+<h3> Color </h3>
+<label><input type="checkbox" checked> Black</label>
+  <label><input type="checkbox" checked> Beige</label>
+  <label><input type="checkbox" checked> Grey</label>
+
+  <h3>  Size </h3>
+   <label><input type="checkbox" checked> ONE SIZE </label>
+
+</aside>
+
+
+<div class="top-bar">
+  <input class="search" type="text" placeholder="Search..">
+ <button class="button">New</button>
+ <button class="button1">Price asending</button>
+ <button class="button1">Price descending</button>
+ <button class="button1">Rating</button>
+
 </div>
 
-<div class="image-row">
+<div class="product-grid">
     <div class="item">
 
      <img src="sofa.jpg" alt="item 1"> 
