--- a/categories.html
+++ b/categories.html
@@ -12,9 +12,16 @@
 
   <h3>Keywords</h3>
   <div class="tags">
-    <span class="tag">Grey</span>
-    <span class="tag">Smart</span>
-    <span class="tag">Modern</span>
+<input type="checkbox" id="grey-tag" hidden>
+<label for="grey-tag" class="tag">Grey</label>
+
+<input type="checkbox" id="smart-tag" hidden>
+<label for="smart-tag" class="tag">Smart</label>
+
+<input type="checkbox" id="modern-tag" hidden>
+<label for="modern-tag" class="tag">Modern</label>
+
+
   </div>
 
   <h3>Categories</h3>
