--- a/categories.html
+++ b/categories.html
@@ -45,7 +45,7 @@
   <label><input type="checkbox" class="colour-filter" value="grey" > Grey </label>
 
   <h3>  Size </h3>
-  <label><input type="checkbox" checked> ONE SIZE </label>
+  <label><input type="checkbox" > ONE SIZE </label>
 
 </aside>
 
@@ -53,16 +53,16 @@
 
 <div class="top-bar">
   <input class="search" type="text" placeholder="Search..">
- <button class="button">New</button>
- <button class="button1">Price asending</button>
- <button class="button1">Price descending</button>
- <button class="button1">Rating</button>
+ <button class="btn-New button-sort">New</button>
+ <button class="btn-PriceAsc button-sort">Price asending</button>
+ <button class="btn-PriceDesc button-sort">Price descending</button>
+ <button class="btn-Rating button-sort">Rating</button>
 
 </div>
 
 <div class="product-grid">
-    <div class="item" data-keywords="grey modern sofa" data-category="sofas" data-colour="beige">
-
+    <div class="item" data-keywords="grey modern sofa" data-category="sofas" data-colour="beige"
+    data-new="true" data-price="295" data-rating="4">
      <img src="sofa.jpg" alt="item 1"> 
               <div class="product-text">
             <h2> Sofa </h2>
@@ -70,7 +70,8 @@
               </div>
     </div>
 
- <div class="item" data-keywords="smart modern pillow" data-category="throw pillows" data-colour="grey">
+ <div class="item" data-keywords="smart modern pillow" data-category="throw pillows" data-colour="grey"
+ data-new="true" data-price="20" data-rating="3">
          <img src="throwpillow2.png" alt="item 2">
          <div class="product-text">
             <h2> Throw Pillow</h2>
@@ -78,15 +79,17 @@
          </div>
     </div>
 
-      <div class="item" data-keywords="grey blankets"data-category="throw blankets" data-colour="grey">
-         <img src="throwblanket.png" alt="item 3">
+      <div class="item" data-keywords="grey blankets"data-category="throw blankets" data-colour="grey"
+      data-new="true" data-price="20" data-rating="4">
+       <img src="throwblanket.png" alt="item 3">
                   <div class="product-text">
             <h2> Throw Blanket</h2>
             <p> £20 </p>
     </div>
       </div>
 
-  <div class="item" data-category="rugs" data-colour="black">
+  <div class="item" data-category="rugs" data-colour="black"
+  data-new="true" data-price="20" data-rating="4">
          <img src="rug.png" alt="item 4" >
                   <div class="product-text">
             <h2> Rug </h2>
@@ -94,8 +97,10 @@
     </div>
   </div>
 
-    <div class="item">
-         <img src="consoletable.png" alt="item 5" data-category="coffee tables" data-colour="grey">
+    <div class="item" data-category="coffee tables" data-colour="grey"
+         data-new="false" data-price="2" data-rating="4">
+
+         <img src="consoletable.png" alt="item 5" >
                   <div class="product-text">
             <h2> Console table </h2>
             <p> £20 </p>
@@ -103,11 +108,19 @@
     </div>
 </div>
 
+
 <script>
 const keywordCheckboxes = document.querySelectorAll(".tags input[type='checkbox']");
 const categoryCheckboxes = document.querySelectorAll(".category-filter");
 const colourCheckboxes = document.querySelectorAll(".colour-filter");
 const products = document.querySelectorAll(".item");
+const productGrid = document.querySelector(".product-grid");
+
+const btnNew       = document.querySelector(".btn-New");
+const btnPriceAsc  = document.querySelector(".btn-PriceAsc");
+const btnPriceDesc = document.querySelector(".btn-PriceDesc");
+const btnRating    = document.querySelector(".btn-Rating");
+
 
 function applyFilters() {
   const activeKeywords = [...keywordCheckboxes].filter(cb => cb.checked).map(cb => cb.value);
@@ -118,11 +131,9 @@ function applyFilters() {
     const productKeywords = (product.dataset.keywords || "").split(" ");
     const productCategory = product.dataset.category || "";
     const productColours = (product.dataset.colour || "").split(" ");
-
     const categoryMatch = activeCategories.length === 0 || activeCategories.includes(productCategory);
     const keywordMatch = activeKeywords.length === 0 || activeKeywords.some(k => productKeywords.includes(k));
     const colourMatch = activeColours.length === 0 || activeColours.some(c => productColours.includes(c));
-
     product.style.display = categoryMatch && keywordMatch && colourMatch ? "block" : "none";
   });
 }
@@ -130,9 +141,43 @@ function applyFilters() {
 keywordCheckboxes.forEach(cb => cb.addEventListener("change", applyFilters));
 categoryCheckboxes.forEach(cb => cb.addEventListener("change", applyFilters));
 colourCheckboxes.forEach(cb => cb.addEventListener("change", applyFilters));
+
+function getProductsArray() {
+  return [...document.querySelectorAll(".item")];
+}
+function render(sortedProducts) {
+  sortedProducts.forEach(p => productGrid.appendChild(p));
+}
+
+function setActiveButton(btn) {
+  document.querySelectorAll(".button-sort").forEach(b => b.classList.remove("active"));
+  btn.classList.add("active");
+}
+
+btnNew.addEventListener("click", () => {
+  setActiveButton(btnNew);
+  getProductsArray().forEach(p => {
+    p.style.display = p.dataset.new === "true" ? "block" : "none";
+  });
+});
+
+btnPriceAsc.addEventListener("click", () => {
+  setActiveButton(btnPriceAsc);
+  render(getProductsArray().sort((a, b) => Number(a.dataset.price) - Number(b.dataset.price)));
+});
+
+btnPriceDesc.addEventListener("click", () => {
+  setActiveButton(btnPriceDesc);
+  render(getProductsArray().sort((a, b) => Number(b.dataset.price) - Number(a.dataset.price)));
+});
+
+btnRating.addEventListener("click", () => {
+  setActiveButton(btnRating);
+  render(getProductsArray().sort((a, b) => Number(b.dataset.rating) - Number(a.dataset.rating)));
+});
+
 </script>
 
-<!-- Adjusts the price slider -->
 <script>
 const slider = document.getElementById("price");
 const label = document.getElementById("price-num");
