added search input and message for no input

--- a/categories.html
+++ b/categories.html
@@ -58,16 +58,20 @@
 <div class="main">
 
 <div class="top-bar">
+
   <input class="search" type="text" placeholder="Search..">
  <button class="btn-New button-sort">New</button>
  <button class="btn-PriceAsc button-sort">Price asending</button>
  <button class="btn-PriceDesc button-sort">Price descending</button>
  <button class="btn-Rating button-sort">Rating</button>
 
+
 </div>
-<p id="no-results" style="display:none; font-size:14px; margin-top:10px;">
-    No products matched your search.
+   <!-- results for no match in search input -->
+<p id="no-results" style="display:none; font-size:20px; margin-top: 5px; font-weight: 500;">
+    Uh oh! No products matched your search.
 </p>
+
 
 
 <div class="product-grid">
