added logo and about us information

--- a/About.html
+++ b/About.html
@@ -6,25 +6,25 @@
 <div class="split-page">
 
     <div class="left">
-    <h1>About</h1>
+    <h1>ABOUT US</h1>
 
-    <p>Loft & living offers a carefully considered selection of homeware for every style,
-        budget and season. Established in 2025, Loft & Living aims to provide affordable
-        and long-lasting furniture designed to create a cozy and complete home.
-        </p>
         <p>
-        Products are sourced from European brands known for their innovative designs, durability
-        and affordable quality without compromising quality. Each piece in our collection
-        is authentic, original and sourced from authorised manufacturers. </p>
+        Welcome to Loft & Living, your new breakthrough in modern and contemporary living.
+        We are building a brand dedicated to putting the customer first, offering products
+        that showcase a fresh way of living without breaking the bank. Our goal is to help you
+        transform houses into comfortable, calm, and inspiring homes. We meticulously select every
+        item for both its practicality and beautiful design. From the living room to the bedroom, and
+        home offices to kitchens, Loft & Living is here to help you create your dream space. Established in 2025,
+        our commitment since day one has been to focus on exceptional design and quality while maintaining an affordable cost.</p>
     </p>
 
     </div>
 
     <div class="right">
-    <div class="image-border">
+    <!-- <div class="image-border"> -->
 
 <div class="image-place">
-<img src="about-image.jpg" alt="About-image">
+<img src="Logo.png" alt="logo">
 </div>
 </div>
 </div>
