--- a/login.html
+++ b/login.html
@@ -3,19 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sign Up</title>
+  <title>Login</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <div class="form-container">
-    <h2>Create Account</h2>
-    <form id="signupForm">
-      <div class="input-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" placeholder="Enter your username" required>
-      </div>
-
+    <h2>Login</h2>
+    <form id="loginForm">
       <div class="input-group">
         <label for="email">Email</label>
         <input type="email" id="email" placeholder="Enter your email" required>
@@ -26,26 +21,25 @@
         <input type="password" id="password" placeholder="Enter your password" required>
       </div>
 
-      <button type="submit" class="btn">Sign Up</button>
+      <button type="submit" class="btn">Login</button>
 
       <p class="switch-text">
-        Already have an account?
-        <a href="index.html">Login</a>
+        Don't have an account?
+        <a href="signup.html">Sign Up</a>
       </p>
     </form>
   </div>
 
   <script>
-    document.getElementById('signupForm').addEventListener('submit', function(e) {
+    document.getElementById('loginForm').addEventListener('submit', function(e) {
       e.preventDefault();
-      const username = document.getElementById('username').value.trim();
       const email = document.getElementById('email').value.trim();
       const password = document.getElementById('password').value.trim();
 
-      if (!username || !email || !password) {
+      if (email === "" || password === "") {
         alert("Please fill in all fields!");
       } else {
-        alert("Sign up successful (front-end only demo)");
+        alert("Login successful");
       }
     });
   </script>
