minor update (div)

--- a/Basket.html
+++ b/Basket.html
@@ -14,12 +14,15 @@
             <main>
                 <section class="basket-layout">
                     <div class="basket-items">
+                        <div class="basket-item">
                         <!-- product cards & details -->
                          <img src="" alt="Product Image">
                          <div class="item-details">
                              <h3>Sofa</h3>
                              <p class="price">£295</p>
                              <p class="qty">Quantity: 1</p>
+                         </div>
+                        </div> 
                     </div>
                     <aside class="basket-summary">
                         <!-- discounts, total & checkout section w/ buttons -->
