--- a/categories.html
+++ b/categories.html
@@ -77,7 +77,7 @@
 <div class="product-grid">
     <div class="item" data-keywords="grey modern sofa" data-category="sofas" data-colour="beige"
     data-new="true" data-price="295" data-rating="4">
-     <img src="sofa.jpg" alt="item 1"> 
+     <img src="category-images/sofa.jpg" alt="item 1"> 
               <div class="product-text">
             <h2> Sofa </h2>
             <p> £295 </p>
@@ -86,7 +86,7 @@
 
  <div class="item" data-keywords="smart modern pillow" data-category="throw pillows" data-colour="grey"
  data-new="true" data-price="20" data-rating="3">
-         <img src="throwpillow2.png" alt="item 2">
+         <img src="category-images/throwpillow2.png" alt="item 2">
          <div class="product-text">
             <h2> Throw Pillow</h2>
             <p> £20 </p>
@@ -95,7 +95,7 @@
 
       <div class="item" data-keywords="grey blankets"data-category="throw blankets" data-colour="grey"
       data-new="true" data-price="20" data-rating="4">
-       <img src="throwblanket.png" alt="item 3">
+       <img src="category-images/throwblanket.png" alt="item 3">
                   <div class="product-text">
             <h2> Throw Blanket</h2>
             <p> £20 </p>
@@ -104,7 +104,7 @@
 
   <div class="item" data-category="rugs" data-colour="black"
   data-new="true" data-price="20" data-rating="4">
-         <img src="rug.png" alt="item 4" >
+         <img src="category-images/rug.png" alt="item 4" >
                   <div class="product-text">
             <h2> Rug </h2>
             <p> £20 </p>
@@ -114,7 +114,7 @@
     <div class="item" data-category="coffee tables" data-colour="grey"
          data-new="false" data-price="2" data-rating="4">
 
-         <img src="consoletable.png" alt="item 5" >
+         <img src="category-images/consoletable.png" alt="item 5" >
                   <div class="product-text">
             <h2> Console table </h2>
             <p> £20 </p>
@@ -123,7 +123,7 @@
 </div>
 
 
-<script src="script.js"></script>
+<script type="module" src="js/main.js"></script>
 
 
 </body>
