--- a/Homepage.html
+++ b/Homepage.html
@@ -1,52 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Loft & Living</title>
-    <link rel="stylesheet" href="styles/main.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 
-    <header class="top-bar">
-        <div class="menu-icon">☰</div>
+<div class="row">
 
-        <h1 class="logo">
-            LOFT & LIVING<br>
-            <span>BIRMINGHAM</span>
-        </h1>
-
-        <div class="icons">
-            <span class="icon">🛒</span>
-            <span class="icon">♡</span>
-            <span class="icon">👤</span>
+    <!-- LIVING ROOM -->
+    <a class="category living" href="livingroom.html">
+        <div class="title-box">LIVING ROOM</div>
+        <div class="image-box">
+            <img src="pictures/livingroom.png" alt="Living Room">
         </div>
-    </header>
+    </a>
 
-    <main class="categories">
+    <!-- KITCHEN -->
+    <a class="category kitchen" href="kitchen.html">
+        <div class="title-box">KITCHEN</div>
+        <div class="image-box">
+            <img src="pictures/kitchen.png" alt="Kitchen">
+        </div>
+    </a>
 
-        <section class="card living-room">
-            <div class="title">LIVING ROOM</div>
-        </section>
+    <!-- OFFICE -->
+    <a class="category office" href="office.html">
+        <div class="title-box">OFFICE</div>
+        <div class="image-box">
+            <img src="pictures/office_final.png" alt="Office">
+        </div>
+    </a>
 
-        <section class="card kitchen">
-            <div class="title">KITCHEN</div>
-        </section>
+    <!-- BATHROOM -->
+    <a class="category bathroom" href="bathroom.html">
+        <div class="title-box">BATHROOM</div>
+        <div class="image-box">
+            <img src="pictures/bathroom.png" alt="Bathroom">
+        </div>
+    </a>
 
-        <section class="card office">
-            <div class="title">OFFICE</div>
-        </section>
+    <!-- BEDROOM -->
+    <a class="category bedroom" href="bedroom.html">
+        <div class="title-box">BEDROOM</div>
+        <div class="image-box">
+            <img src="pictures/bedroom.png" alt="Bedroom">
+        </div>
+    </a>
 
-        <section class="card bathroom">
-            <div class="title">BATHROOM</div>
-        </section>
-
-        <section class="card bedroom">
-            <div class="title">BEDROOM</div>
-        </section>
-
-    </main>
+</div>
 
 </body>
 </html>
