price range slider is functional

--- a/categories.html
+++ b/categories.html
@@ -31,15 +31,15 @@
   <label><input type="checkbox" class="category-filter" value="throw pillows" > Throw pillows</label>
   <label><input type="checkbox" class="category-filter" value="throw blankets" > Throw blankets</label>
   <label><input type="checkbox" class="category-filter" value="rugs" > Rugs</label>
-  <label><input type="checkbox" class="category-filter" value="coffee tables"> Coffee tables</label>
+  <label><input type="checkbox" class="category-filter" value="consoletables"> Console tables</label>
 
 <h3> Price  </h3>
 <div class="price-wrap">
-  <label for="price" id="price-num">£0-100</label>
+  <label for="price" id="price-num">£0-295</label>
 <div class="price-slider">
 
-  <input type="range" id="price-min" min="0" max="100" value="0">
-  <input type="range" id="price-max"  min="0" max="100" value="100">
+  <input type="range" id="price-min" min="0" max="295" value="0">
+  <input type="range" id="price-max"  min="0" max="295" value="295">
   
   <div class="track"></div>
   <div class="range" id="range-display"></div>
@@ -111,7 +111,7 @@
     </div>
   </div>
 
-    <div class="item" data-category="coffee tables" data-colour="grey"
+    <div class="item" data-category="consoletables" data-colour="grey"
          data-new="false" data-price="2" data-rating="4">
 
          <img src="category-images/consoletable.png" alt="item 5" >
