sorted css code into 4 files for simplicity

--- a/categories.html
+++ b/categories.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 <title>Living Room</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="css/base.css">
+<link rel="stylesheet" href="css/structure.css">
+<link rel="stylesheet" href="css/reusable.css">
+<link rel="stylesheet" href="css/category-page.css">
 </head>
 <body>
 
