--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header id="main-header">
-        <h1 class="title">Contact Us</h1>
+        <h1 class="title">CONTACT US</h1>
     </header>
 
     <main>
@@ -25,7 +25,7 @@
                 <label for="email">Email<span class="required">*</span></label>
                 <input type="email" id="email" name="email" placeholder="Email Address" required>
 
-                <label for="order">Order Number</label>
+                <label for="order">Order Number (If Applicable)</label>
                 <input type="order" id="order" name="order" placeholder="Enter Order Number">
 
                 <label for="message">Message<span class="required">*</span></label>
@@ -37,8 +37,6 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2025 Loft & Living | All Rights Reserved.</p>
-    </footer>
+    
 </body>
 </html>
