--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/structure.css">
+    <link rel="stylesheet" href="css/reusable.css">
+    <link rel="stylesheet" href="css/contact-page.css">
+
  
 </head>
 <body>
