updated the container size and font size

--- a/contact.html
+++ b/contact.html
@@ -30,10 +30,10 @@
                 <input type="email" id="email" name="email" placeholder="Email Address" required>
 
                 <label for="order">Order Number (If Applicable)</label>
-                <input type="order" id="order" name="order" placeholder="Enter Order Number">
+                <input type="text" id="order" name="order" placeholder="Enter Order Number">
 
                 <label for="message">Message<span class="required">*</span></label>
-                <textarea id="message" name="message" placeholder="Enter message or query" required></textarea>
+                <textarea id="message" name="message" placeholder="Enter message or enquiry" required></textarea>
 
                 <button type="submit">Submit</button>
             </form>
