refined the about page to meet the wireframe and modified faq section

--- a/About.html
+++ b/About.html
@@ -9,13 +9,18 @@
     <h1>ABOUT US</h1>
 
         <p>
-        Welcome to Loft & Living, your new breakthrough in modern and contemporary living.
-        We are building a brand dedicated to putting the customer first, offering products
-        that showcase a fresh way of living without breaking the bank. Our goal is to help you
-        transform houses into comfortable, calm, and inspiring homes. We meticulously select every
-        item for both its practicality and beautiful design. From the living room to the bedroom, and
-        home offices to kitchens, Loft & Living is here to help you create your dream space. Established in 2025,
-        our commitment since day one has been to focus on exceptional design and quality while maintaining an affordable cost.</p>
+        Welcome to Loft & Living, your new breakthrough in
+        modern and contemporary living. We are building a brand
+        dedicated to putting the customer first, offering products that
+        showcase a fresh way of living without breaking the bank.
+        Our goal is to help you transform houses into comfortable,
+        calm, and inspiring homes. We meticulously select every
+        item for both its practicality and beautiful design. From the
+        living room to the bedroom, and home offices to kitchens, Loft
+        & Living is here to help you create your dream space.
+        Established in 2025, our commitment since day one has been
+        to focus on exceptional design and quality while maintaining
+        an affordable cost.</p>
     </p>
 
     </div>
