--- a/categories.html
+++ b/categories.html
@@ -34,7 +34,7 @@
   <label><input type="checkbox" class="category-filter" value="throw pillows" > Throw pillows</label>
   <label><input type="checkbox" class="category-filter" value="throw blankets" > Throw blankets</label>
   <label><input type="checkbox" class="category-filter" value="rugs" > Rugs</label>
-  <label><input type="checkbox" class="category-filter" value="consoletables"> Console tables</label>
+  <label><input type="checkbox" class="category-filter" value="console tables"> Console tables</label>
 
 <h3> Price  </h3>
 <div class="price-wrap">
@@ -52,6 +52,7 @@
  <label><input type="checkbox" class="colour-filter" value="black"> Black </label>
   <label><input type="checkbox" class="colour-filter" value="beige"> Beige </label>
   <label><input type="checkbox" class="colour-filter" value="grey" > Grey </label>
+  <label><input type="checkbox" class="colour-filter" value="green" > Green </label>
 
   <h3>  Size </h3>
   <label><input type="checkbox" > ONE SIZE </label>
@@ -78,7 +79,7 @@
 
 
 <div class="product-grid">
-    <div class="item" data-keywords="grey modern sofa" data-category="sofas" data-colour="beige"
+    <div class="item" data-keywords="modern smart sofa" data-category="sofas" data-colour="beige"
     data-new="true" data-price="295" data-rating="4">
      <img src="category-images/sofa.jpg" alt="item 1"> 
               <div class="product-text">
@@ -87,40 +88,40 @@
               </div>
     </div>
 
- <div class="item" data-keywords="smart modern pillow" data-category="throw pillows" data-colour="grey"
- data-new="true" data-price="20" data-rating="3">
-         <img src="category-images/throwpillow2.png" alt="item 2">
+ <div class="item" data-keywords="grey smart modern pillow" data-category="throw pillows" data-colour="grey"
+ data-new="true" data-price="8" data-rating="3">
+         <img src="category-images/throwpillow3.jpg" alt="item 2">
          <div class="product-text">
             <h2> Throw Pillow</h2>
-            <p> £20 </p>
+            <p> £8 </p>
          </div>
     </div>
 
-      <div class="item" data-keywords="grey blankets"data-category="throw blankets" data-colour="grey"
+      <div class="item" data-keywords="green blankets"data-category="throw blankets" data-colour="green"
       data-new="true" data-price="20" data-rating="4">
-       <img src="category-images/throwblanket.png" alt="item 3">
+       <img src="category-images/throwblanket3.jpg" alt="item 3">
                   <div class="product-text">
             <h2> Throw Blanket</h2>
             <p> £20 </p>
     </div>
       </div>
 
-  <div class="item" data-category="rugs" data-colour="black"
-  data-new="true" data-price="20" data-rating="4">
+  <div class="item" data-keywords="modern rug" data-category="rugs" data-colour="black"
+  data-new="true" data-price="70" data-rating="4">
          <img src="category-images/rug.png" alt="item 4" >
                   <div class="product-text">
             <h2> Rug </h2>
-            <p> £20 </p>
+            <p> £70 </p>
     </div>
   </div>
 
-    <div class="item" data-category="consoletables" data-colour="grey"
-         data-new="false" data-price="2" data-rating="4">
+    <div class="item" data-keywords="smart modern console table" data-category="console tables" data-colour="green"
+         data-new="false" data-price="25" data-rating="5">
 
          <img src="category-images/consoletable.png" alt="item 5" >
                   <div class="product-text">
             <h2> Console table </h2>
-            <p> £20 </p>
+            <p> £25 </p>
         </div>
     </div>
 </div>
