Changed HTML links to reflect everyone elses pages for easier linking when we merge everything

--- a/Header and Footer/header_footer.html
+++ b/Header and Footer/header_footer.html
@@ -62,17 +62,17 @@
             <div class="footer-section">
                 <h4>Navigation</h4>
                 <ul>
-                    <li><a href="index.html">Homepage</a></li>
-                    <li><a href="signin.html">My Account</a></li>
+                    <li><a href="Homepage.html">Homepage</a></li>
+                    <li><a href="login.html">My Account</a></li>
                     <li><a href="favourites.html">Favourites</a></li>
-                    <li><a href="basket.html">Basket</a></li>
+                    <li><a href="Basket.html">Basket</a></li>
                 </ul>
             </div>
 
             <div class="footer-section">
                 <h4>Categories</h4>
                 <ul>
-                    <li><a href="living-room.html">Living Room</a></li>
+                    <li><a href="categories.html">Living Room</a></li>
                     <li><a href="office.html">Offices</a></li>
                     <li><a href="kitchen.html">Kitchen</a></li>
                     <li><a href="bathroom.html">Bathrooms</a></li>
@@ -84,7 +84,7 @@
                 <h4>More...</h4>
                 <ul>
                     <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="About.html">About Us</a></li>
                 </ul>
             </div>
         </div>
