Updated HTML links

--- a/Header and Footer/header_footer.html
+++ b/Header and Footer/header_footer.html
@@ -34,12 +34,12 @@
 
         <nav class="dropdown-panel" id="dropdown-nav">
             <ul class="nav-links">
-                <li><a href="living-room.html">Living Room</a></li>
+                <li><a href="Categories.html">Living Room</a></li>
                 <li><a href="bathroom.html">Bathroom</a></li>
                 <li><a href="bedroom.html">Bedroom</a></li>
                 <li><a href="office.html">Office</a></li>
                 <li><a href="kitchen.html">Kitchen</a></li>
-                <li class="nav-divider"><a href="signin.html">My Account</a></li>
+                <li class="nav-divider"><a href="login.html">My Account</a></li>
             </ul>
         </nav>
     </header>
