Changed logo navigation so when clicked it goes back to the homepage

--- a/Header and Footer/header_footer.html
+++ b/Header and Footer/header_footer.html
@@ -14,7 +14,7 @@
             </button>
 
             <div class="logo-wrapper">
-                <a href="index.html">
+                <a href="Homepage.html">
                     <img src="images/logo.png" alt="LOFT & LIVING" class="main-logo">
                 </a>
             </div>
