Fixed Dropdown Menu not working due to changing file names

--- a/Header and Footer/header_footer.html
+++ b/Header and Footer/header_footer.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>LOFT & LIVING BIRMINGHAM</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="header_footer_style.css">
     </head>
 <body>
 
     <header class="site-header">
         <div class="header-inner">
             <button class="menu-btn" id="menu-toggle-btn">
-                <img src="images/icon-menu.png" alt="Menu" class="ui-icon" id="menu-icon-img"> 
+                <img src="header_footer_images/icon-menu.png" alt="Menu" class="ui-icon" id="menu-icon-img"> 
             </button>
 
             <div class="logo-wrapper">
                 <a href="Homepage.html">
-                    <img src="images/logo.png" alt="LOFT & LIVING" class="main-logo">
+                    <img src="header_footer_images/logo.png" alt="LOFT & LIVING" class="main-logo">
                 </a>
             </div>
 
             <div class="header-actions">
                 <a href="favourites.html">
-                    <img src="images/icon-heart.png" alt="Favourites" class="ui-icon">
+                    <img src="header_footer_images/icon-heart.png" alt="Favourites" class="ui-icon">
                 </a>
                 <a href="signin.html">
-                    <img src="images/icon-user.png" alt="My Account" class="ui-icon">
+                    <img src="header_footer_images/icon-user.png" alt="My Account" class="ui-icon">
                 </a>
                 <a href="basket.html">
-                    <img src="images/icon-basket.png" alt="Basket" class="ui-icon">
+                    <img src="header_footer_images/icon-basket.png" alt="Basket" class="ui-icon">
                 </a>
             </div>
         </div>
@@ -52,10 +52,10 @@
         <div class="footer-inner">
             <div class="footer-section social-links">
                 <a href="#">
-                    <img src="images/icon-twitter.png" alt="Twitter" class="social-icon">
+                    <img src="header_footer_images/icon-twitter.png" alt="Twitter" class="social-icon">
                 </a>
                 <a href="#">
-                    <img src="images/icon-instagram.png" alt="Instagram" class="social-icon">
+                    <img src="header_footer_images/icon-instagram.png" alt="Instagram" class="social-icon">
                 </a>
             </div>
 
@@ -89,6 +89,6 @@
             </div>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="header_footer_script.js"></script>
 </body>
 </html>
