added name for logo

--- a/About.html
+++ b/About.html
@@ -29,7 +29,7 @@
     <!-- <div class="image-border"> -->
 
 <div class="image-place">
-<img src="Logo.png" alt="logo">
+<img src="about-logo.png" alt="logo">
 </div>
 </div>
 </div>
