--- a/livingroom.html
+++ b/livingroom.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <title>Living Room</title>
-<link rel="stylesheet" href="css/base.css">
-<link rel="stylesheet" href="css/structure.css">
-<link rel="stylesheet" href="css/reusable.css">
-<link rel="stylesheet" href="css/category-page.css">
+<link rel="stylesheet" href="livingroom-css/livingroom-base.css">
+<link rel="stylesheet" href="livingroom-css/livingroom-structure.css">
+<link rel="stylesheet" href="livingroom-css/livingroom-reusable.css">
+<link rel="stylesheet" href="livingroom-css/livingroom-page.css">
 </head>
 <body>
 
@@ -81,7 +81,7 @@
 <div class="product-grid">
     <div class="item" data-keywords="modern smart sofa" data-category="sofas" data-colour="beige"
     data-new="true" data-price="295" data-rating="4">
-     <img src="category-images/sofa.jpg" alt="item 1"> 
+     <img src="livingroom-images/sofa.jpg" alt="item 1"> 
               <div class="product-text">
             <h2> Sofa </h2>
             <p> £295 </p>
@@ -90,7 +90,7 @@
 
  <div class="item" data-keywords="grey smart modern pillow" data-category="throw pillows" data-colour="grey"
  data-new="true" data-price="8" data-rating="3">
-         <img src="category-images/throwpillow3.jpg" alt="item 2">
+         <img src="livingroom-images/throwpillow3.jpg" alt="item 2">
          <div class="product-text">
             <h2> Throw Pillow</h2>
             <p> £8 </p>
@@ -99,7 +99,7 @@
 
       <div class="item" data-keywords="green blankets"data-category="throw blankets" data-colour="green"
       data-new="true" data-price="20" data-rating="4">
-       <img src="category-images/throwblanket3.jpg" alt="item 3">
+       <img src="livingroom-images/throwblanket3.jpg" alt="item 3">
                   <div class="product-text">
             <h2> Throw Blanket</h2>
             <p> £20 </p>
@@ -108,7 +108,7 @@
 
   <div class="item" data-keywords="modern rug" data-category="rugs" data-colour="black"
   data-new="true" data-price="70" data-rating="4">
-         <img src="category-images/rug.png" alt="item 4" >
+         <img src="livingroom-images/rug.png" alt="item 4" >
                   <div class="product-text">
             <h2> Rug </h2>
             <p> £70 </p>
@@ -118,7 +118,7 @@
     <div class="item" data-keywords="smart modern console table" data-category="console tables" data-colour="green"
          data-new="false" data-price="25" data-rating="5">
 
-         <img src="category-images/consoletable.png" alt="item 5" >
+         <img src="livingroom-images/consoletable.png" alt="item 5" >
                   <div class="product-text">
             <h2> Console table </h2>
             <p> £25 </p>
