--- a/livingroom.html
+++ b/livingroom.html
@@ -127,7 +127,7 @@
 </div>
 
 
-<script type="module" src="js/main.js"></script>
+<script type="module" src="livingroom-js/main.js"></script>
 
 
 </body>
