added a link to the sofa product to redirect it to the sofa product's page

--- a/livingroom.html
+++ b/livingroom.html
@@ -79,6 +79,7 @@
 
 
 <div class="product-grid">
+  <a href="sofa.html">
     <div class="item" data-keywords="modern smart sofa" data-category="sofas" data-colour="beige"
     data-new="true" data-price="295" data-rating="4">
      <img src="livingroom-images/sofa.jpg" alt="item 1"> 
@@ -87,6 +88,7 @@
             <p> £295 </p>
               </div>
     </div>
+  </a>
 
  <div class="item" data-keywords="grey smart modern pillow" data-category="throw pillows" data-colour="grey"
  data-new="true" data-price="8" data-rating="3">
