added missing product console tables to price asc and desc

--- a/livingroom.html
+++ b/livingroom.html
@@ -57,7 +57,7 @@
   <label><input type="checkbox" class="colour-filter" value="green" > Green </label>
 
   <h3>  Size </h3>
-  <label><input type="checkbox" > ONE SIZE </label>
+  <label><input type="checkbox" class="size-filter" value="one-size" > ONE SIZE </label>
 
 </aside>
 
@@ -67,7 +67,7 @@
 
   <input class="search" type="text" placeholder="Search..">
  <button class="btn-New button-sort">New</button>
- <button class="btn-PriceAsc button-sort">Price asending</button>
+ <button class="btn-PriceAsc button-sort">Price ascending</button>
  <button class="btn-PriceDesc button-sort">Price descending</button>
  <button class="btn-Rating button-sort">Rating</button>
 
@@ -101,7 +101,7 @@
          </div>
     </div>
 
-      <div class="item" data-keywords="green blankets"data-category="throw blankets" data-colour="green"
+      <div class="item" data-keywords="green blankets" data-category="throw blankets" data-colour="green"
       data-new="true" data-price="20" data-rating="4">
        <img src="livingroom-images/throwblanket3.jpg" alt="item 3">
                   <div class="product-text">
