--- a/livingroom.html
+++ b/livingroom.html
@@ -74,23 +74,23 @@
 
 </div>
    <!-- results for no match in search input -->
-<p id="no-results" style="display:none; font-size:20px; margin-top: 5px; font-weight: 500;">
+<p id="no-results" style="display:none; font-size:20px; margin-top: 15px; padding-left: 48px; font-weight: 500;">
     Uh oh! No products matched your search.
 </p>
 
 
 
 <div class="product-grid">
-  <a href="sofa.html">
+  <!-- <a href="sofa.html"> -->
     <div class="item" data-keywords="modern smart sofa" data-category="sofas" data-colour="beige"
-    data-new="true" data-price="295" data-rating="4">
+    data-new="true" data-price="295" data-rating="4" onclick="location.href='sofa.html'">
      <img src="livingroom-images/sofa.jpg" alt="item 1"> 
               <div class="product-text">
             <h2> Sofa </h2>
             <p> £295 </p>
               </div>
     </div>
-  </a>
+  <!-- </a> -->
 
  <div class="item" data-keywords="grey smart modern pillow" data-category="throw pillows" data-colour="grey"
  data-new="true" data-price="8" data-rating="3">
