--- a/Draft/html/About.html
+++ b/Draft/html/About.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>About Us</title>
-<link rel="stylesheet" href="../css/Styles.css" />
+<link rel="stylesheet" href="../css/About-styles.css" />
 </head>
 <body>
 <div class="split-page">
