--- a/Draft/html/signin.html
+++ b/Draft/html/signin.html
@@ -4,10 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sign In</title>
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+
+<link rel="stylesheet" href="../css/signup.style.css">
 </head>
 
 <body class="page-background">
@@ -41,5 +43,6 @@
 
 </body>
 </html>
+
 
 
