--- a/Draft/html/signup.html
+++ b/Draft/html/signup.html
@@ -18,39 +18,40 @@
 <section class="form-box">
 <h1 class="form-title">NEW HERE?</h1>
 
-<form class="form-fields">
+<form method="POST" action="../../backend/routes/userRoutes.php" class="form-fields">
+  <input type="hidden" name="action" value="register">
 
-<div class="input-group">
-<span class="input-label">Name</span>
-<input type="text" required>
-</div>
+  <div class="input-group">
+    <span class="input-label">Name</span>
+    <input type="text" name="name" required>
+  </div>
 
-<div class="input-group">
-<span class="input-label">Surname</span>
-<input type="text" required>
-</div>
+  <div class="input-group">
+    <span class="input-label">Surname</span>
+    <input type="text" name="surname" required>
+  </div>
 
-<div class="input-group">
-<span class="input-label">Email</span>
-<input type="email" required>
-</div>
+  <div class="input-group">
+    <span class="input-label">Email</span>
+    <input type="email" name="email" required>
+  </div>
 
-<div class="input-group">
-<span class="input-label">Address</span>
-<input type="text">
-</div>
+  <div class="input-group">
+    <span class="input-label">Address</span>
+    <input type="text" name="address">
+  </div>
 
-<div class="input-group">
-<span class="input-label">Password</span>
-<input type="password" required>
-</div>
+  <div class="input-group">
+    <span class="input-label">Password</span>
+    <input type="password" name="password" required>
+  </div>
 
-<button type="submit" class="main-button">Submit</button>
+  <button type="submit" class="main-button">Submit</button>
 
-<p class="form-footer">
-Already have an account?
-<a href="signin.html" class="link-primary">Sign in</a>
-</p>
+  <p class="form-footer">
+    Already have an account?
+    <a href="signin.html" class="link-primary">Sign in</a>
+  </p>
 
 </form>
 </section>
